# SurfaceMeshIO

./: README.md  pyproject.toml
examples/: example_01.ovito
src/SurfaceMeshIO/: __init__.py
tests/: test_io.py
workflows/: python-tests.yml
