[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SurfaceMeshIO"
version = "2025.1"
description = "A file writer & writer for OVITO surface meshes with their auxilliary information"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "[[License]]"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ovito >= 3.12.0",
]

[project.urls]
repository = "https://github.com/nnn911/SurfaceMeshIO"

[project.entry-points.'OVITO.FileWriter']
"Surface Mesh File Writer" = "SurfaceMeshIO:SurfaceMeshFileWriter"

[project.entry-points.'OVITO.FileReader']
"Surface Mesh File Reader" = "SurfaceMeshIO:SurfaceMeshFileReader"

[tool.setuptools.packages.find]
where = ["src"]
